cmake_minimum_required(VERSION 3.23)
project(Assignment_3___Jumble_Puzzle)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment_3___Jumble_Puzzle
        .idea/.gitignore
        ".idea/Assignment 3 - Jumble Puzzle.iml"
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        testJumble.cpp)
